Prefer Set.of instead of Collections.singleton
Signed-off-by: Sami Salonen <ssalonen@gmail.com>